[package]
name = "mojave-prover-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
mojave-client = { workspace = true }
mojave-msgio = { workspace = true }
mojave-rpc-core = { workspace = true }
mojave-rpc-macros = { workspace = true }
mojave-rpc-server = { workspace = true }
mojave-utils = { workspace = true }

ethrex-prover = { workspace = true }
ethrex-rpc = { workspace = true }
guest_program = { workspace = true }

axum = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
