[package]
name = "mojave-rpc-macros"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
mojave-rpc-core = { workspace = true }
mojave-rpc-server = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
