[package]
name = "mojave-signature"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[features]
default = ["secp256k1"]
ed25519 = ["dep:ed25519-dalek"]
secp256k1 = ["dep:secp256k1"]

[dependencies]
# Core dependencies, always included
bincode = { workspace = true }
hex = { workspace = true }
mojave-utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

# Optional crypto libraries
ed25519-dalek = { workspace = true, optional = true }
secp256k1 = { workspace = true, features = ["std"], optional = true }

cfg-if = "1.0"
