[package]
name = "mojave-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
mojave-client = { workspace = true }
mojave-node-lib = { workspace = true }
mojave-utils = { workspace = true }

ethrex-common = { workspace = true }
ethrex-rpc = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-blockchain = { workspace = true }
ethrex-storage-rollup = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-rlp = { workspace = true }
ethrex-l2 = { workspace = true }
ethrex-l2-rpc = { workspace = true }

tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }

k256 = { workspace = true, features = ["ecdh"] }
rand = { workspace = true }
reqwest = { workspace = true }
secp256k1 = { workspace = true }

[dev-dependencies]
ctor = "0.4.2"
