[package]
name = "mojave-tests"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dev-dependencies]
ctor = "0.4.2"

[dependencies]
mojave-client = { workspace = true }
mojave-node-lib = { workspace = true }
mojave-utils = { workspace = true }

ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-l2-rpc = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-rlp = { workspace = true }
ethrex-rpc = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }

axum = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
secp256k1 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
