[package]
name = "mojave-utils"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio = { workspace = true, features = [
	"macros",
	"rt",
	"rt-multi-thread",
	"time",
] }

[dependencies]
ethrex-blockchain = { workspace = true }
ethrex-l2 = { workspace = true, features = ["l2"] }
ethrex-metrics = { workspace = true }
ethrex-rpc = { workspace = true }
ethrex-storage-rollup = { workspace = true, features = ["l2"] }
ethrex-vm = { workspace = true }
ethrex-common = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-storage = { workspace = true }

bytes = { workspace = true, features = ["serde"] }
cfg-if = "1.0"
clap = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, features = ["ecdh"] }
lazy_static = { workspace = true }
local-ip-address = { version = "0.6" }
rand = { version = "0.8.5" }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
