[package]
name = "mojave-utils"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
ethrex-common = { workspace = true }
ethrex-p2p = { workspace = true }
mojave-rpc-core = { workspace = true }

anyhow = { workspace = true }
daemonize = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
