[package]
name = "mojave-rpc-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }

[dependencies]
ethrex-rpc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
